--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT"
 
 [dependencies]
 derive_more = { version = "0.99.17", default_features = false, features = ["from", "display"] }
-futures = "0.3.28"
+futures-core = "0.3.28"
+futures-util = "0.3.28"
 serde = { version = "1.0.175", features = ["derive"] }
 serde_json = { version = "1.0.103", features = ["raw_value"] }
